Added text to i18n

--- a/app/qp-ui5-material/webapp/i18n/i18n.properties
+++ b/app/qp-ui5-material/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Material Service
+appTitle=Material Service 2
 
 #YDES: Application description
 appDescription=Create sourcing project from Material
